--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'androidx.fragment:fragment:1.5.5'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'androidx.compose.material:material:1.2.0'
+    implementation 'androidx.wear:wear:1.2.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
