--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
-        android:name=".presentation.LocationApp"
+        android:name=".presentation.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,7 +28,7 @@
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
-        <service android:name=".presentation.repository.LocationService" android:foregroundServiceType="location" />
+        <service android:name=".presentation.MainService" android:foregroundServiceType="location" />
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
